--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,3 +25,5 @@
 @import '../../components/ShadowOverlay/styles/ShadowOverlay.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
+
+@import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
