--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -1,3 +1,10 @@
+// Colors
+$primary-color: #027af2;
+// $secondary-color: #fff;
+
+$primary-color-light: #80bfff;
+$primary-color-dark: #0052a3;
+
 // Shades of Red
 $light-red: #f28b82;
 $medium-red: #e53935;
@@ -6,9 +13,13 @@ $dark-red: #b71c1c;
 // Shades of Gray
 $light-gray: #e0e0e0;
 $medium-gray: #9e9e9e;
+
 $dark-gray: #424242;
+$darker-gray: #333;
 $very-dark-gray: #1d1d1d;
 
 $neutral-gray: #f5f5f5;
+
+$white: #fff;
 
 $header-height: 68px;
