Add basic header, style

--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -1,9 +1,13 @@
 // Colors
 $primary-color: #027af2;
-// $secondary-color: #fff;
 
 $primary-color-light: #80bfff;
 $primary-color-dark: #0052a3;
+$primary-color-darker: #262a31;
+
+$secondary-color: #009688;
+$secondary-color-light: #4db6ac;
+$secondary-color-dark: #00695c;
 
 // Shades of Red
 $light-red: #f28b82;
