--- a/src/components/AppHeader/styles/AppHeader.scss
+++ b/src/components/AppHeader/styles/AppHeader.scss
@@ -1,53 +1,29 @@
-.header {
-  background-color: transparent;
-
+.app-header {
   position: fixed;
   top: 0;
   left: 0;
-  // width: 100%;
+  right: 0;
   z-index: 1000;
-  /* Start off-screen with a slight scale down */
-  transform: translateX(-100%) scale(0.8);
-  transform-origin: top center; /* Adjust origin if needed */
-  // transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: 0.2s ease-in;
-  top: 4.6em;
-  height: $header-height;
-  // opacity: 0;
-  border-bottom-right-radius: 5px;
 
-  &.visable {
-    transform: translateX(0) scale(1);
-    height: fit-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    opacity: 1;
-    background-color: white;
-    &.dark-mode {
-      background-color: $very-dark-gray;
-      color: $neutral-gray;
+  background-color: $light-gray;
 
-      li:hover {
-        background-color: black;
-      }
-    }
+  &.dark-mode {
+    background-color: $primary-color-darker;
+  }
+  img {
+    // width: 100%;
+    height: $header-height;
+    // object-fit: contain;
   }
 
-  nav {
-    ul {
-      margin: 0px;
-      //   display: flex;
-      //   justify-content: space-between;
-
-      li {
-        padding: 1em;
-        cursor: pointer;
-
-        a {
-        }
-        &:hover {
-          background-color: $light-gray;
-        }
-      }
+  button {
+    outline: none;
+    svg {
+      font-size: 1.5em;
     }
   }
 }
