--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import '../../components/SearchBar/styles/SearchBar.scss';
 @import '../../components/ShadowOverlay/styles/ShadowOverlay.scss';
 @import '../../components/CaloriesProgress/styles/CaloriesProgress.scss';
+@import '../../components/StatsCarousel/styles/StatsCarousel.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
