--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,8 @@
 @import '../../components/ShadowOverlay/styles/ShadowOverlay.scss';
 @import '../../components/CaloriesProgress/styles/CaloriesProgress.scss';
 @import '../../components/StatsCarousel/styles/StatsCarousel.scss';
+@import '../../components/Macros/styles/Macros.scss';
+@import '../../components/MacrosDistribution/styles/MacrosDistribution.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
