Style CaloriesProgress and MacrosDistribution

--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -37,6 +37,8 @@ $neutral-gray: #f5f5f5;
 $white: #fff;
 
 $header-height: 68px;
+$card-height: 240px;
+$circular-progress-size: 160px;
 
 // Macro colors (SCSS variables)
 $macro-protein: var(--macro-protein);
