--- a/src/components/CaloriesProgress/styles/CaloriesProgress.scss
+++ b/src/components/CaloriesProgress/styles/CaloriesProgress.scss
@@ -1,10 +1,8 @@
-.calories-progress-card {
+.calories-progress {
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-
-  padding: 1rem;
 
   &.dark {
     background-color: $darker-gray;
@@ -24,7 +22,9 @@
   }
 
   .circular-progress {
-    padding: 0.2rem 1rem;
+    align-self: center;
+    width: $circular-progress-size;
+    // padding: 0.2rem 1rem;
     grid-column: 1 /2;
     grid-row: 2;
   }
