--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,6 +27,7 @@
 @import '../../components/StatsCarousel/styles/StatsCarousel.scss';
 @import '../../components/Macros/styles/Macros.scss';
 @import '../../components/MacrosDistribution/styles/MacrosDistribution.scss';
+@import '../../components/MacrosProgress/styles/MacrosProgress.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
