--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -17,9 +17,13 @@ button {
   @include fluid-font(14, 19);
 }
 
+.page-container {
+  padding: 1rem 0rem;
+}
+
 .card {
   height: $card-height;
-  padding: 1rem;
+  padding: 0.8rem 1rem;
 
   h6 {
     grid-column: 1 / -1;
@@ -27,10 +31,10 @@ button {
     justify-self: start;
   }
 
-  background-color: $white;
+  background-color: $white !important;
 
   &.dark-mode {
-    background-color: $darker-gray;
+    background-color: $darker-gray !important;
     color: $white;
   }
 }
@@ -40,14 +44,16 @@ button {
   grid-auto-flow: column;
   align-items: center;
   justify-content: space-between;
-  gap: 0.6rem;
+  gap: 0.5rem;
 
   padding: 8px 12px;
   border-radius: 8px;
   background-color: var(--macro-bg, rgba(0, 0, 0, 0.05));
-  width: 100%;
+  // width: 100%;
 
   .label {
+    font-size: 0.8rem;
+
     padding: 2px 4px;
     border-radius: 6px;
   }
