--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,9 +28,9 @@
 @import '../../components/Macros/styles/Macros.scss';
 @import '../../components/MacrosDistribution/styles/MacrosDistribution.scss';
 @import '../../components/MacrosProgress/styles/MacrosProgress.scss';
+@import '../../components/TimesContainer/styles/TimesContainer.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
-
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
