Style header, prefs panel

--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -41,6 +41,8 @@ $neutral-gray: #f5f5f5;
 $white: #fff;
 
 $header-height: 68px;
+$header-margin: 82.39px;
+
 $card-height: 240px;
 $circular-progress-size: 160px;
 
