--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -33,7 +33,8 @@ body {
 .main {
   min-height: 100vh;
 
-  margin-top: $header-height;
+  margin-top: $header-margin;
+
   padding: 0 1em;
 
   background-color: $neutral-gray;
