--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 
 @import '../../components/AppHeader/styles/AppHeader.scss';
 @import '../../components/AppFooter/styles/AppFooter.scss';
+@import '../../components/TimesContainer/styles/TimesContainer.scss';
 @import '../../components/Prefs/styles/Prefs.scss';
 @import '../../components/PrefsButton/styles/PrefsButton.scss';
 @import '../../components/SearchBar/styles/SearchBar.scss';
@@ -27,6 +28,7 @@
 @import '../../components/StatsCarousel/styles/StatsCarousel.scss';
 @import '../../components/Macros/styles/Macros.scss';
 @import '../../components/MacrosDistribution/styles/MacrosDistribution.scss';
+@import '../../components/MacrosProgress/styles/MacrosProgress.scss';
 @import '../../components/EditIcon/styles/EditIcon.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
