Add dynamic SlideDialog

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,6 +30,7 @@
 @import '../../components/MacrosDistribution/styles/MacrosDistribution.scss';
 @import '../../components/MacrosProgress/styles/MacrosProgress.scss';
 @import '../../components/EditIcon/styles/EditIcon.scss';
+@import '../../components/SlideDialog/styles/SlideDialog.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
