Add basic circular slider

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,9 +31,11 @@
 @import '../../components/MacrosProgress/styles/MacrosProgress.scss';
 @import '../../components/EditIcon/styles/EditIcon.scss';
 @import '../../components/SlideDialog/styles/SlideDialog.scss';
+@import '../../components/CaloriesProgress/styles/EditComponent.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
+@import 'rc-slider/assets/index.css';
