--- a/src/components/CaloriesProgress/styles/EditComponent.scss
+++ b/src/components/CaloriesProgress/styles/EditComponent.scss
@@ -8,10 +8,10 @@
     position: absolute;
     // top: 50%;
     bottom: 0;
-    z-index: 2;
+    // z-index: 2;
   }
   .circular-slider-container {
-    height: 160px;
+    height: 200px;
     // width: 150px;
     overflow: hidden;
     // transform: rotate(-90deg);
