Add macros edit picker

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,6 +32,7 @@
 @import '../../components/EditIcon/styles/EditIcon.scss';
 @import '../../components/SlideDialog/styles/SlideDialog.scss';
 @import '../../components/CaloriesProgress/styles/EditComponent.scss';
+@import '../../components/MacrosProgress/styles/EditComponent.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
