--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -44,6 +44,7 @@ $very-dark-gray: #1d1d1d;
 $neutral-gray: #f5f5f5;
 
 $white: #fff;
+$black: #000;
 
 $header-height: 68px;
 $header-margin: 82.39px;
