Add distribution EditComponent

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,6 +33,7 @@
 @import '../../components/SlideDialog/styles/SlideDialog.scss';
 @import '../../components/CaloriesProgress/styles/EditComponent.scss';
 @import '../../components/MacrosProgress/styles/EditComponent.scss';
+@import '../../components/MacrosDistribution/styles/EditComponent.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
