Add basic CurrMeal card

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import '../../components/CaloriesProgress/styles/EditComponent.scss';
 @import '../../components/MacrosProgress/styles/EditComponent.scss';
 @import '../../components/MacrosDistribution/styles/EditComponent.scss';
+@import '../../components/CurrMeal/styles/CurrMeal.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
