--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -17,6 +17,8 @@ body {
   // min-height: 100vh;
   // min-width: 100vw;
   min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 
   background-color: $neutral-gray;
   color: $dark-gray;
