--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -18,7 +18,8 @@ button {
 }
 
 .page-container {
-  padding: 1rem 0rem;
+  // padding: 1rem 0rem;
+  height: calc(100vh - $header-margin - 110px);
 }
 
 .card {
