Style cmps for actual mobile use

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -38,6 +38,7 @@ body {
   margin-top: $header-margin;
 
   padding: 0 1em;
+  padding-bottom: 1.5em;
 
   background-color: $neutral-gray;
   color: $dark-gray;
