--- a/src/components/MacrosProgress/styles/EditComponent.scss
+++ b/src/components/MacrosProgress/styles/EditComponent.scss
@@ -1,4 +1,7 @@
 .edit-macros-container {
+  margin: 0 auto;
+  padding-top: 1em;
+
   .picker-container {
     // height: 150px;
     // overflow: hidden;
