Add picker to Calories edit

--- a/src/components/CaloriesProgress/styles/EditComponent.scss
+++ b/src/components/CaloriesProgress/styles/EditComponent.scss
@@ -6,10 +6,32 @@
 
   .calories-amount {
     position: absolute;
+    color: $primary-color;
+    font-weight: 700;
     // top: 50%;
-    bottom: 0;
+    // bottom: 0;
     // z-index: 2;
   }
+
+  .picker-container {
+    // position: absolute;
+    margin-top: 4em;
+    // bottom: 0;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+
+    .kcal {
+      //   font-size: 0.8em;
+      //   color: var(--text-color);
+      //   position: absolute;
+      //   bottom: -1em;
+      //   left: 1em;
+      //   right: -2em;
+      //   transform: translateX(-50%);
+    }
+  }
+
   .circular-slider-container {
     height: 200px;
     // width: 150px;
@@ -17,10 +39,22 @@
     // transform: rotate(-90deg);
 
     svg {
-      transform: rotate(-90deg);
+      //   transform: rotate(-90deg);
       path {
       }
       //   width: 300px;
     }
   }
+}
+
+.circular-slider-container svg {
+  -webkit-transform: rotate(-90deg) translateZ(0);
+  transform: rotate(-90deg) translateZ(0);
+  transform-origin: 50% 50%;
+  transform-box: fill-box; // key for SVG in Safari
+  will-change: transform;
+  touch-action: none; // stop Safari gestures grabbing touches
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
