--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -105,6 +105,12 @@ p {
 
   outline: none;
   border: none;
+  box-shadow: none;
+
+  outline: none !important;
+  box-shadow: none !important;
+  &:focus-visible {
+  }
 
   .MuiButton-contained {
     background-color: $dark-gray !important;
