--- a/src/components/CaloriesProgress/styles/EditComponent.scss
+++ b/src/components/CaloriesProgress/styles/EditComponent.scss
@@ -14,22 +14,12 @@
   }
 
   .picker-container {
-    // position: absolute;
     margin-top: 4em;
-    // bottom: 0;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
+  }
 
-    .kcal {
-      //   font-size: 0.8em;
-      //   color: var(--text-color);
-      //   position: absolute;
-      //   bottom: -1em;
-      //   left: 1em;
-      //   right: -2em;
-      //   transform: translateX(-50%);
-    }
+  .buttons-container {
+    display: flex;
+    gap: 1em;
   }
 
   .circular-slider-container {
