--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import '../../components/MacrosProgress/styles/EditComponent.scss';
 @import '../../components/MacrosDistribution/styles/EditComponent.scss';
 @import '../../components/CurrMeal/styles/CurrMeal.scss';
+@import '../../components/UserMsg/styles/UserMsg.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
