--- a/src/components/Prefs/styles/Prefs.scss
+++ b/src/components/Prefs/styles/Prefs.scss
@@ -8,7 +8,7 @@
   // right: -300px;
   left: -300px;
   transition: right 0.3s ease;
-  background-color: white;
+  background-color: $white;
   padding: 10px;
   border: 1px solid #ccc;
   z-index: 1000;
@@ -16,6 +16,16 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   position: fixed;
   transition: 0.2s ease-in;
+
+  &.dark-mode {
+    background-color: $very-dark-gray;
+
+    .MuiSwitch-thumb {
+      background-color: $primary-color-dark;
+    }
+  }
+  .MuiSwitch-thumb {
+  }
   // translate: 150%;
   // padding: 2em;
   @media (min-width: 1020px) {
