--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -36,6 +36,7 @@
 @import '../../components/MacrosDistribution/styles/EditComponent.scss';
 @import '../../components/CurrMeal/styles/CurrMeal.scss';
 @import '../../components/UserMsg/styles/UserMsg.scss';
+@import '../../components/ItemSearch/styles/ItemSearch.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
