--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
+@import '../../CustomMui/CustomToggle/CustomToggle.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
