--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -8,7 +8,7 @@
     color: $white !important;
   }
 
-  .search-bar {
+  .search-container {
     position: sticky;
     top: 0;
     background: $white;
@@ -16,13 +16,16 @@
     padding-top: 4px;
     padding: 1rem;
 
+    display: grid;
+    gap: 1rem;
+
     &.dark-mode {
       background: $darker-gray;
     }
   }
 
   &.dark-mode {
-    .search-bar {
+    .search-container {
       background: $darker-gray;
       border-bottom: 1px solid white;
 
