Add MacrosDonut to item list

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -37,6 +37,7 @@
 @import '../../components/CurrMeal/styles/CurrMeal.scss';
 @import '../../components/UserMsg/styles/UserMsg.scss';
 @import '../../components/ItemSearch/styles/ItemSearch.scss';
+@import '../../components/MacrosDonut/styles/MacrosDonut.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
