--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -2,11 +2,43 @@
   display: grid;
   gap: 12px;
   align-items: start;
-  min-height: calc(100vh - $header-margin);
+  // min-height: calc(100vh - $header-margin);
 
   &.dark-mode {
     background-color: $darker-gray !important;
     color: $white !important;
+  }
+
+  .search-item-container {
+    gap: 1em;
+    .macros-image-container {
+      position: relative;
+
+      .item-image-container {
+        position: absolute;
+        top: 0.2em;
+        // left: 0em;
+        right: -0.2em;
+        bottom: 0.2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    .donut {
+      width: 50px;
+      height: 50px;
+
+      .donut-inner {
+        width: 40px;
+        height: 40px;
+
+        .totals {
+          display: none;
+        }
+      }
+    }
   }
 
   .search-container {
