Move list logic to CustomList cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,6 +44,7 @@
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 @import '../../CustomMui/CustomToggle/styles/CustomToggle.scss';
 @import '../../CustomMui/CustomInput/styles/CustomInput.scss';
+@import '../../CustomMui/CustomList/styles/CustomList.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
