Add initial ItemDetails

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,6 +38,7 @@
 @import '../../components/UserMsg/styles/UserMsg.scss';
 @import '../../components/ItemSearch/styles/ItemSearch.scss';
 @import '../../components/MacrosDonut/styles/MacrosDonut.scss';
+@import '../../components/ItemDetails/styles/ItemDetails.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
