Style select items to dark mode

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -112,3 +112,13 @@ button {
     }
   }
 }
+
+.MuiPaper-root:has(.MuiMenu-list).dark-mode {
+  color: $white;
+  background-color: $dark-gray !important;
+
+  .MuiMenu-list {
+    color: $white;
+    background-color: $dark-gray !important;
+  }
+}
