--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -110,6 +110,10 @@ button {
     .MuiSvgIcon-root {
       color: $white;
     }
+
+    .MuiInputBase-input {
+      color: $white;
+    }
   }
 }
 
