--- a/src/components/ItemDetails/styles/ItemDetails.scss
+++ b/src/components/ItemDetails/styles/ItemDetails.scss
@@ -1,6 +1,7 @@
 .item-details {
   display: grid;
-  gap: 1rem;
+
+  gap: 1.5rem;
   padding: 1rem;
   height: 100%;
 
@@ -81,7 +82,7 @@
   }
   .selects-container {
     display: grid;
-
+    gap: 1rem;
     .select-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -99,5 +100,19 @@
         }
       }
     }
+  }
+}
+
+.picker-container {
+  display: grid;
+  // grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+
+  padding: 0em 1em;
+
+  .buttons-container {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1em;
   }
 }
