--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -50,3 +50,4 @@
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
+@import 'react-swipeable-list/dist/styles.css';
