--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -126,3 +126,35 @@ button {
     background-color: $dark-gray !important;
   }
 }
+
+.swipeable-right-action {
+  // width: 100px; /* or any size you want */
+  display: flex;
+  // background-color: #e53935; /* match destructive look */
+  // color: white;
+}
+
+.swipeable-right-action {
+  width: 80px;
+  // height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  // align-items: center;
+  // justify-content: center;
+
+  &.delete {
+    background-color: $medium-red;
+    color: $white;
+  }
+
+  .delete-icon-button {
+    // width: 40px;
+    // height: 40px;
+
+    svg {
+    }
+  }
+}
