--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -45,7 +45,7 @@
 
     &.Mui-selected {
       font-weight: 600 !important;
-
+      color: $primary-color !important;
       svg {
         font-size: 1.5em !important;
       }
