--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -158,3 +158,16 @@ button {
     }
   }
 }
+
+.divider {
+  &.dark-mode {
+    border-color: $white;
+  }
+}
+
+.page-container {
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
