Add navigation buttons and Clock to Diary

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -110,6 +110,9 @@ p {
   outline: none !important;
   box-shadow: none !important;
   &:focus-visible {
+    outline: none !important;
+    box-shadow: none !important;
+    border: none !important;
   }
 
   .MuiButton-contained {
