--- a/src/pages/Diary/styles/Diary.scss
+++ b/src/pages/Diary/styles/Diary.scss
@@ -1,5 +1,14 @@
 .diary {
-  .header {
+  .header:first-child {
+    // padding: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+
+    .circular-progress {
+      width: 100px;
+      height: 100px;
+    }
   }
 
   .meals-container {
