--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,6 +39,7 @@
 @import '../../components/ItemSearch/styles/ItemSearch.scss';
 @import '../../components/MacrosDonut/styles/MacrosDonut.scss';
 @import '../../components/ItemDetails/styles/ItemDetails.scss';
+@import '../../components/LoggedList/styles/LoggedList.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
