--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -48,6 +48,7 @@
 @import '../../CustomMui/CustomInput/styles/CustomInput.scss';
 @import '../../CustomMui/CustomList/styles/CustomList.scss';
 @import '../../CustomMui/CustomSelect/styles/CustomSelect.scss';
+@import '../../CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
