--- a/src/components/LoggedList/styles/LoggedList.scss
+++ b/src/components/LoggedList/styles/LoggedList.scss
@@ -1,10 +1,13 @@
 .logged-items {
   .placeholder-container {
+    justify-self: stretch;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
     .placeholder {
+      color: $medium-gray;
+
       text-align: center;
     }
   }
