--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -49,6 +49,7 @@
 @import '../../CustomMui/CustomList/styles/CustomList.scss';
 @import '../../CustomMui/CustomSelect/styles/CustomSelect.scss';
 @import '../../CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss';
+@import '../../CustomMui/CustomAccordion/styles/CustomAccordion.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
