Add LinearMacrosProgress, move calc macros logic to service

--- a/src/CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss
+++ b/src/CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss
@@ -1,6 +1,6 @@
 .linear-progress-container {
   display: grid;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: 1fr 70px;
   grid-template-rows: auto 1fr;
   gap: 0.3rem 1rem;
 
@@ -11,5 +11,16 @@
   .header-container {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
+  }
+
+  .MuiLinearProgress-root {
+    grid-column: 1 / 2;
+  }
+
+  .value-container {
+    display: flex;
+    align-items: center;
+    justify-self: end;
+    gap: 0.2rem;
   }
 }
