--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,6 +40,7 @@
 @import '../../components/MacrosDonut/styles/MacrosDonut.scss';
 @import '../../components/ItemDetails/styles/ItemDetails.scss';
 @import '../../components/LoggedList/styles/LoggedList.scss';
+@import '../../components/LinearMacrosProgress/styles/LinearMacrosProgress.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
