Remove unwanted declarations

--- a/src/pages/Diary/styles/Diary.scss
+++ b/src/pages/Diary/styles/Diary.scss
@@ -11,6 +11,10 @@
     }
   }
 
+  .macros-accordion-container {
+    margin-bottom: 1rem;
+  }
+
   .meals-container {
     display: grid;
     gap: 1rem;
