--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import '../../components/ItemDetails/styles/ItemDetails.scss';
 @import '../../components/LoggedList/styles/LoggedList.scss';
 @import '../../components/LinearMacrosProgress/styles/LinearMacrosProgress.scss';
+@import '../../components/GoalBanner/styles/GoalBanner.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
