--- a/src/pages/Diary/styles/Diary.scss
+++ b/src/pages/Diary/styles/Diary.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
+    padding: 1rem 0;
 
     .circular-progress {
       width: 100px;
