--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -1,5 +1,6 @@
 :root {
-  --primary-color: #027af2;
+  // --primary-color: #027af2;
+  --primary-color: #009688;
   --primary-color-dark: #0052a3;
   --primary-color-light: #80bfff;
 
