--- a/src/components/StatsCarousel/styles/StatsCarousel.scss
+++ b/src/components/StatsCarousel/styles/StatsCarousel.scss
@@ -20,3 +20,10 @@
   height: 100%;
   object-fit: cover;
 }
+
+.skeleton {
+  height: calc($card-height * 1.32) - 22px;
+  .goal-container {
+    grid-row: 2/-1;
+  }
+}
