--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -116,13 +116,13 @@ p {
   }
 
   .MuiButton-contained {
-    background-color: $dark-gray !important;
+    // background-color: $dark-gray !important;
 
-    background-image: linear-gradient(
-      to bottom,
-      hsla(220, 3%, 21%, 0.909),
-      hsla(0, 0%, 0%, 0.92)
-    );
+    // background-image: linear-gradient(
+    //   to bottom,
+    //   hsla(220, 3%, 21%, 0.909),
+    //   hsla(0, 0%, 0%, 0.92)
+    // );
 
     box-shadow: none;
   }
