--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -204,6 +204,7 @@ select {
 }
 
 .search-item-container.skeleton {
+  height: auto;
   padding: 0.5rem 1rem;
   display: grid;
   grid-template-columns: 50px 1fr 40px;
